fixing paths
