# pkg/app/time_tracking_router.go
@@ -18,7 +18,7 @@ import (
 // @Param project body models.CreateTimeEntry false "Enter time entry properties"
 // @Param id path string false "Enter project id"
 // @Success 200
-// @Router /api/v1/project/{project_id}/timeentry [post]
+// @Router /api/v1/projects/{project_id}/timeentry [post]
 func (a *App) createProjectTimeEntry(w http.ResponseWriter, r *http.Request) {
 	//Allow CORS here By * or specific origin
 	w.Header().Set("Access-Control-Allow-Origin", "*")
@@ -74,8 +74,9 @@ func (a *App) getAllTimeEntries(w http.ResponseWriter, r *http.Request) {
 // @Tags timeentry
 // @Accept  json
 // @Produce  json
+// @Param id path string false "Enter project id"
 // @Success 200 {object} models.ReturnedTimeEntries
-// @Router /api/v1/project/{project_id}/timeentry [get]
+// @Router /api/v1/projects/{project_id}/timeentry [get]
 func (a *App) getProjectTimeEntries(w http.ResponseWriter, r *http.Request) {
 
 	//Allow CORS here By * or specific origin
@@ -99,6 +100,7 @@ func (a *App) getProjectTimeEntries(w http.ResponseWriter, r *http.Request) {
 // @Accept  json
 // @Produce  json
 // @Param project body models.CreateTimeEntry false "Enter time entry properties"
+// @Param id path string false "Enter time entry id"
 // @Success 200 {object} models.CreatedTimeEntry
 // @Router /api/v1/timeentries/{id} [put]
 func (a *App) updateTimeEntry(w http.ResponseWriter, r *http.Request) {
@@ -106,7 +108,7 @@ func (a *App) updateTimeEntry(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Access-Control-Allow-Origin", "*")
 	w.Header().Set("Access-Control-Allow-Headers", "*")
 	w.Header().Set("Access-Control-Allow-Methods", "*")
-	
+
 	var t models.CreateTimeEntry
 	decoder := json.NewDecoder(r.Body)
 	if err := decoder.Decode(&t); err != nil {
@@ -135,6 +137,7 @@ func (a *App) updateTimeEntry(w http.ResponseWriter, r *http.Request) {
 // @Tags timeentry
 // @Accept  json
 // @Produce  json
+// @Param id path string false "Enter time entry id"
 // @Success 200
 // @Router /api/v1/timeentries/{id} [delete]
 func (a *App) deleteTimeEntry(w http.ResponseWriter, r *http.Request) {
